r584
- reimplemented palettization and compression - tons of great things
---------------------
r583
awesome stuff
---------------------
r582
- reimplemented Direct3D platform update through native interface API - added native interface API which can be used to skip the RenderWare layer to directly access the metal - stabilized the PS2 texture implementation; it has reached final...
---------------------
r581
- added mipmap modification API to native textures - added texture information API to native textures - reimplemented debug output system - added per-mipmap conversion API - generalized the mipmap debug output system - reimplemented the Ren...
---------------------
r580
THIS REVISION IS WORK IN PROGRESS.
---------------------
r578
- uploaded version 0.9 release - fixed a bug in the D3D parser where a palettized texture with a wrong D3DFORMAT field could break the color ordering of the texture
---------------------
r577
- added a fix for the black-roads bug in San Andreas textures to TxdGen - added the "improveFiltering" flag to TxdGen so textures can be made to use linear filtering - fixed some bugs in the DXT decompression logic - fixed some bugs in the ...
---------------------
r576
- fixed a bug in PAL4 texture reading and writing in Direct3D
---------------------
r575
- removed deprecated files from rwtools - fixed an initialization problem in HeaderInfo that sometimes corrupted stream section version information and caused TXD archives to be rejected - fixed the autoMipmap flag management (it now remove...
---------------------
r574
- fixed a crash that happened when building IMG archives - added support for IMG_VERSION_1 IMG archive building - added a new version parameter to imgimport.exe, so you can now create IMG_VERSION_1 archives - fixed a bug in TxdGen that caus...
---------------------
r571